<resources>
    <string name="app_name">My Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="ready_to_score_let_s_get_you_logged_in">Ready to score? Let’s get you logged in!</string>
    <string name="email">Email\n</string>
    <string name="ball">Ball</string>
    <string name="ready_to_join_the_team_let_s_get_you_signed_up">Ready to join the team? Let’s get you signed up!</string>
    <string name="password_again">Password Again</string>
    <string name="back">Back</string>
    <string name="construction_sign">Construction Sign</string>
    <string name="this_page_is_currently_under_development">This page is currently under development.</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="guest">Guest</string>
    <string name="tournament_detailed_description">Tournament detailed description...</string>
    <string name="tournament_name">Tournament name</string>
    <string name="organiser">Organiser</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="details">Details</string>
    <string name="location">Location:</string>
    <string name="location2">Location</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="my_teams">My Teams</string>
    <string name="logout_">Logout</string>
    <string name="my_tournaments">My Tournaments</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_tournaments_">My Tournaments</string>
    <string name="edit">Edit</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="home">Home</string>
    <string name="email_">Email:</string>
    <string name="username_">Username:</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="start_date">Start date (YYYY-MM-DD)</string>
    <string name="end_date">End date (YYYY-MM-DD)</string>
    <string name="description">Description</string>
    <string name="number_of_teams">Number of teams</string>
    <string name="create">Create</string>
    <string name="max_number_of_teams">Max number of teams:</string>
    <string name="location_">Location:</string>
    <string name="start_date_">Start date:</string>
    <string name="end_date_">End date:</string>
    <string name="max_teams_">Max teams:</string>
    <string name="description_">Description:</string>
    <string name="organiser_">Organiser:</string>
    <string name="max_teams__">Max teams:</string>
    <string name="update">Update</string>
</resources>