<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTournamentActivity">

    <androidx.appcompat.widget.Toolbar
        android:paddingTop="16dp"
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#424242"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#424242">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/tournament_name"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="#000000"
                android:textColorHint="#899499"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/locationEditText"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/location2"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="#000000"
                android:textColorHint="#899499"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

            <EditText
                android:id="@+id/startDateEditText"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/start_date"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="#000000"
                android:textColorHint="#899499"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationEditText" />

            <EditText
                android:id="@+id/endDateEditText"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/end_date"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="#000000"
                android:textColorHint="#899499"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startDateEditText" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_background"
                android:gravity="top|start"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:textColor="#000000"
                android:textColorHint="#899499"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/endDateEditText" />

            <EditText
                android:id="@+id/maxNumberOfTeamsEditText"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_background"
                android:gravity="center_vertical"
                android:hint="@string/number_of_teams"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="#000000"
                android:textColorHint="#899499"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createButton"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_green"
                android:gravity="center"
                android:text="@string/update"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:onClick="updateTournament"
                app:layout_constraintTop_toBottomOf="@+id/maxNumberOfTeamsEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>