<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#424242">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="24dp"
            android:text="@string/profile"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF"
            android:layout_marginTop="16dp"
            android:alpha="0.2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textViewNameProfile"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:layout_marginTop="32dp" />

        <TextView
            android:id="@+id/textViewNameProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="#616161"
            android:layout_marginHorizontal="32dp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel"
            android:layout_marginTop="8dp"
            app:layout_constraintWidth_percent="0.85"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textViewEmailProfile2"
            app:layout_constraintTop_toBottomOf="@+id/textViewNameProfile"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/textViewEmailProfile2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:background="#616161"
            android:layout_marginHorizontal="32dp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLabel"
            android:layout_marginTop="8dp"
            app:layout_constraintWidth_percent="0.85"
            tools:ignore="LabelFor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/btn_green"
            android:gravity="center"
            android:onClick="back"
            android:padding="10dp"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmailProfile2"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.7"
            tools:ignore="OnClick" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
